<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/questionID"
        android:layout_width="208dp"
        android:layout_height="115dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="137dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="479dp"
        android:text="@string/math_quiz"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/answer4"
        android:layout_width="170dp"
        android:layout_height="98dp"
        android:layout_marginStart="204dp"
        android:layout_marginTop="535dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="98dp"
        android:text="@string/answer4"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/answer2"
        android:layout_width="170dp"
        android:layout_height="98dp"
        android:layout_marginStart="204dp"
        android:layout_marginTop="437dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="196dp"
        android:text="@string/answer2"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/answer3"
        android:layout_width="170dp"
        android:layout_height="98dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="535dp"
        android:layout_marginEnd="214dp"
        android:layout_marginBottom="98dp"
        android:text="@string/answer3"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/answer1"
        android:layout_width="170dp"
        android:layout_height="98dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="437dp"
        android:layout_marginEnd="214dp"
        android:layout_marginBottom="196dp"
        android:text="@string/answer1"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvhttp"
        android:layout_width="249dp"
        android:layout_height="80dp"
        android:layout_marginStart="123dp"
        android:layout_marginTop="278dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="373dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>